[#62322604] logo height correct when menu collapses

--- a/app/assets/stylesheets/menu.css
+++ b/app/assets/stylesheets/menu.css
@@ -96,3 +96,11 @@ vertical-align:middle!important;
 .fix-logo-height {
   padding-top: 10px;
 }
+
+.navbar-brand{
+  height: 20px;
+}
+
+.navbar-toggle > .navbar-brand {
+  height: 100%;
+}
